--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -50,14 +50,14 @@ Noisy channel principles provide a powerful framework for explaining how the hum
 
 Do children also do the same kind of flexible, expectation-based language processing? Prior research on this topic is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. But all of these examples take place in complex contexts and were designed to test the development of other abilities; none was designed to make a direct and straightforward test of expectation-based integration in the absence of other processing demands. Our current experiments thus attempt to make such a test of whether young children flexibly integrate expectations about speakers with the noise in a communicative channel. 
 
-We created a paradigm that allowed us to manipulate both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments support the idea that children, as well as adults, show evidence of flexibly trading off between information sources in language comprehension.
+We created a paradigm that allowed us to manipulate both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments support the idea that children, like adults, show evidence of flexibly trading off between information sources in language comprehension.
 
 \begin{figure}[tb]
      \centering
         \begin{subfigure}[b]{.4 \textwidth}
             \caption{\label{fig:exposure}}
             \includegraphics[width=\textwidth]{figures/exposure.pdf}
-        \end{subfigure}\\
+        \end{subfigure}\quad
         \vspace{12 pt}
         \begin{subfigure}[b]{.4 \textwidth}
            \caption{\label{fig:test}}
@@ -79,17 +79,17 @@ Children were recruited at the Bing Nursery School on Stanford's campus. Each ch
 
 \subsubsection{Stimuli, Design, and Procedure}
 
-Experiment 1 consisted of a series of screens on which participants saw two pictures and heard a sentence referring to one of them.\footnote{All stimuli, as well as data and analyses are available in a public repository at \small{\tt{http://github.com/dyurovsky/noisy-kids}}.} Pictures were constructed from clipart freely available on the internet. Audio was recorded by a native English speaking female. In order to increase the ambiguity of the spoken utterances, and thus give us more power to detect error-correction, all of the audio recordings were convolved with a small amount of Brown noise.
+Experiment 1 consisted of a series of screens on which participants saw two pictures and heard a sentence referring to one of them.\footnote{All stimuli, as well as data and analyses are available in a public repository at \small{\tt{http://github.com/dyurovsky/noisy-kids}}.} Pictures were constructed from clipart freely available on the internet, and audio was recorded by a native English speaking female. In order to increase the ambiguity of the spoken utterances, and thus give us more power to detect error-correction, all of the audio recordings were convolved with a small amount of Brown noise.
 
-Each trial contained one semantically plausible picture, and one semantically implausible picture. On Exposure trials, these pictures, and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on trial. For participants in the Plausible Speaker condition, the speaker referred to Plausible referent on each of the eight exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. For participants in both conditions, the Speaker referred to the implausible referent on all eight test trials.
+Each trial contained one semantically plausible picture and one semantically implausible picture. On Exposure trials, these pictures, and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on each trial. For participants in the Plausible Speaker condition, the speaker referred to Plausible referent on each of the eight Exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. For participants in both conditions, the speaker referred to the implausible referent on all eight Test trials.
 
 For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of written prompts, children were given instructions by a live experimenter.\footnote{For a small subset of participants (N=CHECKME), a software bug meant that responses were not tracked automatically and were post-coded from videotapes.}
 
 \subsection{Results}
 
-In order to validate our manipulation, we first analyze the effect of the Speaker on Exposure trials. If they were attending to the Speaker's requests during Exposure trials, participants in the Plausible condition should have chosen the plausible referent (kittens) and participants in the Implausible condition should have chosen the implausible referent. Did they? We provide two convergent analysis that suggest they did. 
+In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the Speaker's requests during Exposure trials, those in the Plausible condition should have chosen the plausible referent (kittens) and those in the Implausible condition should have chosen the implausible referent. We provide two convergent analysis that suggest that they did. 
 
-First, we ask whether participants selected the correct referent in each condition at levels different from chance. We submitted performance for each group and condition separately to a mixed-effects logistic regression with random effects of subject and trial. Both children and adults were significantly more likely to choose the plausible referent in the Plausible condition ($\beta_{adult} = 5.66$, $z = 6.76$, $p <.001$; $\beta_{child} = 2.62$, $z = 5.43$, $p <.001$), and significantly less likely than chance to choose the plausible referent in the Implausible condition ($\beta_{adult} = -3.87$, $z = -7.13$, $p <.001$; $\beta_{child} = -1.9$, $z = 5.61$, $p <.001$). Second, we compared performance across conditions, fiting a mixed-effects regression predicting choice on Exposure trials from group, condition, and their interaction, and found significant effects of all three ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child\: x \: condition} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
+First, we asked whether participants selected the correct referent in each condition at levels different from chance. We submitted performance for each group and condition separately to a mixed-effects logistic regression with random effects of subject and trial. Both children and adults were significantly more likely to choose the plausible referent in the Plausible condition ($\beta_{adult} = 5.66$, $z = 6.76$, $p <.001$; $\beta_{child} = 2.62$, $z = 5.43$, $p <.001$), and significantly less likely than chance to choose the plausible referent in the Implausible condition ($\beta_{adult} = -3.87$, $z = -7.13$, $p <.001$; $\beta_{child} = -1.9$, $z = 5.61$, $p <.001$). Second, we compared performance across conditions, fitting a mixed-effects regression predicting choice on Exposure trials from group, condition, and their interaction, and found significant effects of all three ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child\: x \: condition} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible (although adults selected the correct referent more often in both conditions).
 
 \begin{figure}[t]
 \centering
@@ -98,15 +98,15 @@ First, we ask whether participants selected the correct referent in each conditi
    \label{fig:exp1_results}
 \end{figure}
 
-Did this exposure to a Plausible vs. Implausible speaker change participants' expectations during the ambiguous test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition. While children children were overall more likely to pick the plausible referent in both conditions, the size of the difference between conditions was comparable in adults and children, indicating equal sensitivity to the difference between speakers. To confirm these findings formally, we again fit a mixed effects regression predicting choice on test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not, indicating that both children and adults  ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: x \: condition} = -1.01$,  $z = -1.53$, $p = .13$).
+Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition. While children children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal sensitivity to the difference between speakers ($d_{adult} =1.09$, $d_{child} = 1.10$). To confirm these findings formally, we again fit a mixed effects regression predicting choice on test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not, indicating that both children and adults  ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: x \: condition} = -1.01$,  $z = -1.53$, $p = .13$).
 
-When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), the were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was similar in both groups (d = CHECKME, d = CHECKME), suggesting that preschoolers are already adapting as rapidly and as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
+When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), the were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that preschoolers are already adapting as rapidly and as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
 
 \section{Experiment 2}
 
-Experiment 1 shows that children, to the same degree as adults, flexibly adapt their on-line language processing in accord with their expectations about what a speaker is likely to say. In Experiment 2, we replicate this finding and also test a further prediction of the noisy channel framework for language processing: listeners should adapt to the reliability of the acoustic signal. As speech becomes noisier, and thus harder to hear, listeners should rely more on their expectations. 
+Experiment 1 shows that children, to the same degree as adults, flexibly adapt their on-line language processing in accord with their expectations about what a speaker is likely to say. In Experiment 2, we replicate this finding and also test a further prediction of the noisy channel framework for language processing: children should adapt to the reliability of the acoustic signal. As speech becomes noisier, and thus harder to hear, listeners should rely more on their expectations. 
 
-In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should have selected the plausible referent at test.
+In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, should instead selected the plausible referent at test.
 
 \subsection{Method}
 
@@ -120,34 +120,34 @@ Stimuli were constructed as in Experiment 1 with a few small changes. First, one
 
 \subsection{Results}
 
-As in Experiment 1, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers during Exposure trials. First, we ask whether participants selected the plausible referent when it was asked for by the Plausible speaker, and selected the implausible referent when it was asked for by the Implausible speaker independent of noise level. We submitted performance for each condition and noise level separately to a mixed-effects logistic regression with random effects of subject and trial. 
+As in Experiment 1, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers on Exposure trials. First, we ask whether children selected the plausible referent when it was asked for by the Plausible speaker, and selected the implausible referent when it was asked for by the Implausible speaker independent of noise level. We submitted performance for each condition and noise level separately to a mixed-effects logistic regression with random effects of subject and trial. 
 
-As before, children were more likely than chance to choose the plausible referent in the Plausible condition, but less likely than chance to choose the plausible referent when the speaker asked for the implausible referent (smallest $\beta_{Control} = -.153$, $z = -4.32$, p < .001). Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials noise condition (Implausible, Plausible, Control). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the Implausible referent on Exposure trials ($\beta_{Plausible} = 6.62$,  $z = 8.88$, $p <.001$). Children exposed to the Control speaker, who was identical to the Implausible speaker on Exposure trials, were not significantly different as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: x \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance as expected.
-
+As before, children were more likely than chance to choose the plausible referent in the Plausible condition, but less likely than chance to choose the plausible referent when the speaker asked for the implausible referent (smallest $\beta_{Control} = -.153$, $z = -4.32$, p < .001). Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials from noise level and speaker condition (Implausible, Plausible, Control). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the Implausible referent on Exposure trials ($\beta_{Plausible} = 6.62$,  $z = 8.88$, $p <.001$). Children exposed to the Control speaker, who was identical to the Implausible speaker on Exposure trials, were not significantly different, as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: x \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance.
 
 \begin{figure}[t]
      \centering
      \includegraphics[width=5in]{figures/exp2_results.pdf}
-    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a plausible speaker. In both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to \emph{plausible} referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
+    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a Plausible speaker. In addition, as predicted, in both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to \emph{plausible} referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp2_results}
 \end{figure}
 
-Did children integrate noise level of the acoustic stimuli with Speaker expectations on the ambiguous test trials? Figure~\ref{fig:exp2_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions and under both noise conditions. As predicted, children showed sensitivity to both Speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the Speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible :\ x :\ Noisy} = .33$,  $z = .65$, $p = .51$).
+Did children integrate the noise level of the acoustic stimuli with Speaker expectations on the ambiguous test trials? Figure~\ref{fig:exp2_results} shows the proportion of trials on which children selected the plausible referent at test in both speaker and noise conditions conditions. As predicted, children showed sensitivity to both speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the Speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible \: x \: Noisy} = .33$,  $z = .65$, $p = .51$).
 
-Finally, one alternative explanation was that children simply followed their expectations at all times, e.g., that the experiment rewarded ``silly'' responses regardless of the question. To test this alternative, we asked whether children who were responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed effects model estimating plausible referent on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at test selected it, even when the speaker had only previously referred to the implausible referent. This control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials and not just relying on their prior expectations.
+Finally, one alternative explanation was that children simply followed their expectations at all times, e.g., that the experiment rewarded ``silly'' responses regardless of the question. To test this alternative, we asked whether children who were responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed effects model estimating plausible referent selection on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at Test selected it, even when the speaker had previously always referred to the implausible referent. This Control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials, and not just relying on their prior expectations.
 
 
 \section{General Discussion}
 
-Summarize what we did
+When we use language to communicate, we are doing more than processing the sounds hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise inherent in linguistic communication, a lot of work for this inference is done by our expectations about what speakers are likely to want to say \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to it's reliability \cite{jacobs1999, ernst2002}. This prediction appears to be borne out in adult listeners across domains in language acquisition from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}.
 
-Adults vs. kids - perceptual certainty. And this finding makes predictions about atypical development. Worse language models for kids, or less perceptual certainty. 
+The experiments in this paper provide the first evidence that this adaptive expectation-based language processing is already available to 4-5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-We see here a tradeoff between two models, perception and expectation. But what is the substance of these models? Challenge for future work. Is it pragmatics all the way down? Or are these lower level models based on perceptual similarity and word-coccurrence?
+Interestingly, while the effect size of this adaptation was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not. Overall, children hearing the same ambiguous utterances were more likely to rely more on their linguistic expectations. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively less reliable for children than adults
+\cite{neuman1983, lyons2011}. On this basis, the noisy channel framework makes a clear prediction about integration in atypical populations. Children whose acoustic processing is impaired, (e.g. children with cochlear implants) should rely relatively more on their expectations, whereas children with impaired language models (e.g. children with specific language impairment) should rely relatively more the acoustic signal.
 
-How to integrate with failures of pragmatics and ambiguity resolution? Our paradigm here is lexical and grounded and children have lots of experience with it. Failures tend to happen in cases where complex syntax or abstract semantics (e.g. quantifiers) are at issue - in these cases, more experience is necessary to have a good predictive model, even if you can do some comprehension \cite{barner2011, montag2015}. 
+This same phenomenon begins to offer an explanation for why children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of their model-based expectations when they have reliable models in a given domain. Thus, children should and do integrate when the relevant models are of speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children fail in cases where the relevant models are of quantifier semantics and complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
 
-The end!
+The noisy channel framework thus offers a potential unifying framework for understanding both children's and adults' language processing systems, as well as how one develops from the other. The processing that unfolds is well characterized by the interaction between two models: one of perception, and one of expectation. But what is the content of these models? One possibility is that expectations are fundamentally about speakers, and that linguistic communication is essentially pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distribution of words, reference, and their mutual predictability. We hope that the paradigm we have developed here will be a powerful tool for helping to resolve this fundamental tension. 
 
 \section{Acknowledgments}
 
